    predicate '$lgt_current_time'/3 where the number of seconds would be
    returned as a float instead of as an integer.

    Updated the SICStus Prolog config files in order to support settings
    files. Updated the SICStus Prolog 4.x config file in order to use the
    new "version_data" flag and recognize the new do/2 meta-predicate added
    in version 4.1.

    Updated the library support for unit testing in order to allow per-test
    setup and cleanup goals and to provide timing, testing file information,
    and statistics on passed and failed tests. Updated the "testing" example
    for the changes to the unit test support.

    Updated the Logtalk Windows installer in order to detect the new SICStus
    Prolog 4.1 version. If both 4.0.x and 4.1.x versions are installed, the
    installer creates a shortcut for using version 4.1.x as the back-end
    Prolog compiler.

    Updated the Logtalk Windows installer in order to detect both XSB single-
    threaded and multi-threaded versions and to no longer create integration
    shortcuts for XSB versions older than 3.2.

    Corrected a possible data loss bug when using the Debian and MacOS X
    installers where some third-party mime-type associations might be lost
    when adding the Logtalk mime-type to the Shared MIME-info Database.

    Corrected a harmless syntax error in the Logtalk POSIX install shell
    script when the "update-mime-database" command is not available.

    Added a Logtalk version of the "Closed Knight's Tour" SWI-Prolog CLP(FD)
    example written by Markus Triska.


2.37.5 - October 29, 2009

    Updated the Logtalk multi-threading features, replacing all calls to
    the call_cleanup/2 built-in predicate with calls to the more reliable
    setup_call_cleanup/3 built-in predicate. This change requires recent
    versions of SWI-Prolog, XSB, and YAP when writing multi-threading code.

    Improved performance of the database built-in methods retractall/1 and